--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 						</div>
 					</div>
 				</section>
-				<h2 class="bg-no-repeat bg-size-cover bg-position-center bg-clip-text font-weight-bold text-resp-100 ws-nowrap font-weight-semi-bold ls-0 text-overflow-center mb-5" style="background-image: url(img/demos/cleaning-services/backgrounds/bg2.jpg);font-family: shrikhand;">EL STAR</h2>
+				<h2 class="bg-no-repeat bg-size-cover bg-position-center bg-clip-text font-weight-bold text-resp-100 ws-nowrap font-weight-semi-bold ls-0 text-overflow-center mb-1" style="background-image: url(img/demos/cleaning-services/backgrounds/bg2.jpg);font-family: shrikhand;">EL STAR</h2>
 				<h1 class="text-secondary text-overflow-center text-4 mb-0 appear-animation shrikhand-regular" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400"><strong>HOSTEL AND SURF</strong></h1>
 				<h1 class="mb-0 appear-animation text-overflow-center shrikhand-regular text-secondary text-4 mb-0" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600" style="line-height: 0;"><strong >CAMP</strong></h1>
-				<section id="whoweare" class="section section-with-shape-divider bg-transparent border-0 m-0">
+				<section id="whoweare" class="section section-with-shape-divider bg-transparent border-0 m-0 text-justify">
 
 					<div class="container mt-2 mb-5 pb-5">
 						<div class="row align-items-center mb-4">
@@ -171,7 +171,7 @@
 										<li>10-Night Package: Perfect for those who want a longer stay, allowing you to settle in and fully enjoy the hostel’s vibrant environment.</li>
 										<li>15-Night Package: Designed for travelers seeking an extended stay, offering the opportunity to truly feel at home and immerse in the unique spirit of ElStar.</li>
 									</ul>
-								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and<br> unforgettable.</h6>
+								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and<br> unforgettable.</h6>
 
 								<a href="packages.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
 							</div>
@@ -200,12 +200,12 @@
       <h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
         OUR ROOMS<br>
       </h3>
-      <h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">ElStar Hostel offers a variety of rooms designed to blend comfort with Moroccan charm.</h6>
+      <p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">ElStar Hostel offers a variety of rooms designed to blend comfort with Moroccan charm.</p>
 	  <ul>
 										<li>Double Room: Featuring a cozy double bed, elegant fabrics, and warm Moroccan accents, this room is<br> perfect for couples or solo travelers seeking comfort and style.</li>
 										<li>Shared Room: Our shared dormitory accommodates 3 single beds, ideal for friends or solo adventurers.<br> Each bed is designed with comfort and privacy in mind, while the room’s bohemian decor reflects the<br> local craftsmanship.</li>
 									</ul>
-      <h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature<br> captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind<br> and feel at home.</h6>
+      <h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature<br> captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind<br> and feel at home.</h6>
 
       <!-- Only this button is aligned to the right -->
       <div class="text-end">
@@ -221,9 +221,9 @@
 								<h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
 									ACTIVITIES<br> 
 								</h3>
-								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Welcome to ElStar Hostel, where your stay is more than just a place to rest—it’s a journey into the <br>heart of Morocco. Ride the waves with our surf sessions, share the thrill of skateboarding, or find<br> calm and balance during yoga.</h6>
-								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Explore breathtaking landscapes on a quad ride, wander the vibrant medina, visit the iconic surf<br> village of Taghazout, or glide down the golden dunes of Timlalin.</h6>
-								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">At ElStar, every experience is designed to create memories, stories, and connections that stay with <br>you long after your adventure ends.</h6>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Welcome to ElStar Hostel, where your stay is more than just a place to rest—it’s a journey into the <br>heart of Morocco. Ride the waves with our surf sessions, share the thrill of skateboarding, or find<br> calm and balance during yoga.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Explore breathtaking landscapes on a quad ride, wander the vibrant medina, visit the iconic surf<br> village of Taghazout, or glide down the golden dunes of Timlalin.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">At ElStar, every experience is designed to create memories, stories, and connections that stay with <br>you long after your adventure ends.</p>
 								
 								<a href="activities.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
 							</div>
