--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 								<h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
 									OUR PACKAGES<br> 
 								</h3>
-								<p class=" mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><p class="text-primary " style="display: inline-block">At ElStar Hostel, </p>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,<br> flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</p>
+								<p class=" mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><p class="text-primary " style="display: inline-block">At ElStar Hostel, </p>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</p>
 								<ul>
 										<li>7-Night Package: Ideal for a short getaway, giving you time to relax and experience the cozy ambiance of ElStar.</li>
 										<li>10-Night Package: Perfect for those who want a longer stay, allowing you to settle in and fully enjoy the hostel’s vibrant environment.</li>
 										<li>15-Night Package: Designed for travelers seeking an extended stay, offering the opportunity to truly feel at home and immerse in the unique spirit of ElStar.</li>
 									</ul>
-								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and<br> unforgettable.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and unforgettable.</p>
 
 								<a href="packages.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
 							</div>
@@ -202,10 +202,10 @@
       </h3>
       <p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">ElStar Hostel offers a variety of rooms designed to blend comfort with Moroccan charm.</p>
 	  <ul>
-										<li>Double Room: Featuring a cozy double bed, elegant fabrics, and warm Moroccan accents, this room is<br> perfect for couples or solo travelers seeking comfort and style.</li>
-										<li>Shared Room: Our shared dormitory accommodates 3 single beds, ideal for friends or solo adventurers.<br> Each bed is designed with comfort and privacy in mind, while the room’s bohemian decor reflects the<br> local craftsmanship.</li>
+										<li>Double Room: Featuring a cozy double bed, elegant fabrics, and warm Moroccan accents, this room is perfect for couples or solo travelers seeking comfort and style.</li>
+										<li>Shared Room: Our shared dormitory accommodates 3 single beds, ideal for friends or solo adventurers. Each bed is designed with comfort and privacy in mind, while the room’s bohemian decor reflects the local craftsmanship.</li>
 									</ul>
-      <p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature<br> captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind<br> and feel at home.</p>
+      <p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind and feel at home.</p>
 
       <!-- Only this button is aligned to the right -->
       <div class="text-end">
@@ -221,9 +221,9 @@
 								<h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
 									ACTIVITIES<br> 
 								</h3>
-								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Welcome to ElStar Hostel, where your stay is more than just a place to rest—it’s a journey into the <br>heart of Morocco. Ride the waves with our surf sessions, share the thrill of skateboarding, or find<br> calm and balance during yoga.</p>
-								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Explore breathtaking landscapes on a quad ride, wander the vibrant medina, visit the iconic surf<br> village of Taghazout, or glide down the golden dunes of Timlalin.</p>
-								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">At ElStar, every experience is designed to create memories, stories, and connections that stay with <br>you long after your adventure ends.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Welcome to ElStar Hostel, where your stay is more than just a place to rest—it’s a journey into the heart of Morocco. Ride the waves with our surf sessions, share the thrill of skateboarding, or find calm and balance during yoga.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Explore breathtaking landscapes on a quad ride, wander the vibrant medina, visit the iconic surf village of Taghazout, or glide down the golden dunes of Timlalin.</p>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">At ElStar, every experience is designed to create memories, stories, and connections that stay with you long after your adventure ends.</p>
 								
 								<a href="activities.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
 							</div>
@@ -343,7 +343,7 @@
 		<!-- Gallery -->
 
 <!-- Gallery -->
-<div class="container my-5">
+<div class="container my-5 text-center">
 
         <div class="row g-4">
 
